--- a/여행_제주도_part1.html
+++ b/여행_제주도_part1.html
@@ -46,7 +46,7 @@
        
         <h3 id="who">
             <br><br><br><br><br><br><br>
-            Designed and Writed by <br> <b>JAEBIN YUN</b>
+            Designed and Written by <br> <b>JAEBIN YUN</b>
             </h3>
             <nav>
                 <ul>
